# FASCIILTER

./: .gitignore  CMakeLists.txt  README.md
include/: ascii_converter.h  webcam_capture.h
src/: ascii_converter.cpp  main.cpp  test_ascii.cpp  webcam_capture.cpp
